[package]
name = "oxide-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "og"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
digest = "0.10.7"
hex-literal = "0.4.1"
itertools = "0.12.1"
sha1 = "0.10.6"
